--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </article>
 </main>
 <footer>
-<p>Site criado por <a href="https://github.com/gustavoguanabara/html-css/blob/master/desafios/modulo-02/d010/desafio-android.pdf"   target="_blank">Hiago</a> para o <a href="https://www.youtube.com/" target="_blank">Youtube</a>.</p> 
+<p>Site criado por <a href="https://github.com/gustavoguanabara/html-css/blob/master/desafios/modulo-02/d010/desafio-android.pdf"   target="_blank">Hiago Soares</a> para o <a href="https://www.youtube.com/" target="_blank">Youtube</a>.</p> 
 </footer>
 
 <script src="android.js" defer></script>
